--- a/src/main/resources/static/style/styleCss.css
+++ b/src/main/resources/static/style/styleCss.css
@@ -18,13 +18,132 @@
 }
 
 .formEvento{
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	border-radius: 10px;
 	box-shadow: 0px 0px 5px grey;
-	padding-top: 20px;
-	padding-left: 20px;
-	padding-bottom: 10px;
-	margin-bottom: 60px;
+	width: 250px;	
+}
+
+.formEvento p{
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.formEvento button{
+	margin-left: 30%;
+}
+
+.formEventoField{
+	color: #595959;
+	font-family: sans-serif;	
+}
+
+html, body {
+	margin: 0;
+	height: 100%;
+	width: 100%;
+	min-height: 100%;
+	min-width: 100%;
+	background-color: #f2f2f2;	
 }
 
 .menu{
-	background-color: #3399ff;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	height: 30px;
+	background-color: #333333;
+	box-shadow: 1px 7px 8px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow: 1px 7px 8px 0px rgba(50, 50, 50, 0.75);
+	-webkit-box-shadow: 1px 7px 8px 0px rgba(50, 50, 50, 0.75);
+}
+
+.menu a{
+	text-decoration: none;
+	font-size: x-large;
+	font-weight: bolder;
+	color: #f2f2f2;
+	font-family: sans-serif;
+}
+
+.title{	
+	float: left;
+	padding-left: 10%;
+	transition: 0.5s;
+}
+
+.title:hover{
+	color: #999999;
+}
+
+.cadastro{	
+	float: right;
+	padding-right: 10%;
+	transition: 0.5s;
+}
+
+.cadastro:hover{
+	color: #999999;
+}
+
+.sectionIndex{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	font-family: sans-serif;
+	font-size: xx-large;
+	color: #e6e6e6;			
+}
+
+.sectionIndex h1{
+	text-shadow: 1px 1px white, -1px -1px #444;
+}
+
+.sectionIndex h5{
+	color: #cccccc;
+}
+
+.sectionTable{
+	overflow-x: auto;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	width: 60%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0px 0px 5px grey;	
+}
+
+.tableEventList{
+	width: 100%;
+	border-collapse: collapse;	
+}
+
+.tableEventList thead, tbody{
+	text-align: center;		
+}
+
+.tableEventList tbody tr:nth-child(even){
+	background-color: #f2f2f2;	
+}
+
+.rodape{
+	display: flex;
+	position: absolute;
+	width: 100%;	
+	bottom: 0;
+	align-items: center;
+	justify-content: center;
+}
+
+.rodape p{
+	color: #737373;
+	font-size: small;
+	font-family: sans-serif;
 }
