--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -6,7 +6,7 @@
 	<!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+      <!-- <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>  -->
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,37 +16,31 @@
 
 	<header>
 		<nav class="menu">
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Cadastro de Eventos:</a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Lista de Eventos</a></li>
-		      </ul>
+		    <div>
+	            <a class="title" href="#">Lista de Eventos</a>
+		        <a class="cadastro" href="/eventos">Lista de eventos</a>
 		    </div>
-		</nav>
-	
+		</nav>	
 	</header>
 	
 	
-	<th:block th:include="mensagemValidacao"></th:block>
-	<div class="container formEvento">
-	
-	<form class="container" method="post">
-		Nome: <input type="text" value="" name="nome"/>
-		<div class="row">
-			<div class="input-field col s6">
-				Local: <input type="text" value="" name="local"/>
-			</div>
-			<div class="input-field col s3">
-				Data: <input type="date" value="" name="data"/>
-			</div>
-			<div class="input-field col s3">
-				Horario: <input type="time" value="" name="horario"/>
-			</div>
-		</div>
-		<button class="waves-effect waves-light btn" type="submit">Salvar</button>
-	
-	</form>
+	<div class="formEvento">	
+		<form method="post">
+			<p><label class="formEventoField">Nome:</label><br/><input type="text" value="" name="nome"/></p>
+			<p><label class="formEventoField">Local:</label><br/><input type="text" value="" name="local"/></p>
+			<p><label class="formEventoField">Data:</label><br/><input type="date" value="" name="data"/></p>
+			<p><label class="formEventoField">Horario:</label><br/><input type="time" value="" name="horario"/></p>
+									
+			<p><button type="submit">Salvar</button></p>	
+		</form>	
 	</div>
+		
+	<th:block th:include="mensagemValidacao"></th:block>
+	
+	<footer class="rodape">
+		<p>@Copyright 2020-2020 Sistema web spring boot com autenticação via spring security</p>
+	</footer>		
+	
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
