--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,7 @@
 	<title>EventosApp</title>
 	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+      <!--Import materialize.css-->      
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,18 +15,21 @@
 	
 	<header>
 		<nav class="menu">
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Lista de Eventos</a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar evento</a></li>
-		      </ul>
+		    <div>
+	            <a class="title" href="/login">Lista de Eventos</a>
+		        <a class="cadastro" href="/cadastrarEvento">Cadastrar evento</a>
 		    </div>
-		</nav>
-	
+		</nav>	
 	</header>
 	
-	<h1>Sistema para cadastro de eventos!!</h1>
-	<h3>Faça seu Login e cadastre seus eventos e listas de convidados!</h3>
+	<section class="sectionIndex">	
+		<h1>Sistema para cadastro de eventos!!</h1>
+		<h5>Faça seu Login e cadastre seus eventos e listas de convidados!</h5>
+	</section>
+	
+	<footer class="rodape">
+		<p>@Copyright 2020-2020 Sistema web spring boot com autenticação via spring security</p>
+	</footer>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
