--- a/src/main/resources/static/style/styleCss.css
+++ b/src/main/resources/static/style/styleCss.css
@@ -17,6 +17,33 @@
 	width: 50%;
 }
 
+.formEventoGuest{
+	position: absolute;
+	top: 55%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0px 0px 5px grey;
+	width: 250px;	
+}
+
+.formEventoGuest p{
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+.formEvento h5{
+	padding-left: 5%;
+	padding-right: 5%;
+	text-align: center;
+	font-size: larger;
+}
+
+.formEventoGuest button{
+	margin-left: 25%;
+}
+
 .formEvento{
 	position: absolute;
 	top: 30%;
@@ -106,6 +133,18 @@ html, body {
 
 .sectionIndex h5{
 	color: #cccccc;
+}
+
+.sectionTableGuest{
+	overflow-x: auto;
+	position: absolute;
+	top: 71%;
+	left: 50%;
+	width: 60%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0px 0px 5px grey;	
 }
 
 .sectionTable{
