--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -5,8 +5,6 @@
 	<title>EventosApp</title>
 	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -17,16 +15,14 @@
 
 	<header>
 		<nav class="menu">
-		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Evento</a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista de evento</a></li>
-		      </ul>
+		    <div>
+	            <a class="title" href="/logout">Lista de Eventos</a>
+		        <a class="cadastro" href="/eventos">Lista de eventos</a>
 		    </div>
-		</nav>
+		</nav>	
 	</header>
 	
-	<div th:each="evento : ${evento}" class="container detalhesEvento">
+	<div th:each="evento : ${evento}" class="formEvento">
 	<h5>Detalhes do Evento</h5>
 		<div class="row">
 			<p>Nome: <span th:text="${evento.nome}"></span></p>
@@ -36,37 +32,40 @@
 		</div>
 	</div>
 	
-		 <th:block th:include="mensagemValidacao"></th:block>
-		<div class="container formConvidado">
+	<div class="formEventoGuest">
 		<form method="post" th:object="${convidado}">
-			Nome: <input type="text" value="" name="nomeConvidado" placeholder="Nome Completo"/>
-			Rg: <input type="text" value="" name="rg" placeholder="AA-00.000.000" class="validate"/>
-			<button class="waves-effect waves-light btn" type="submit">Adicionar</button>
+			<p><label class="formEventoField">Nome:</label><br/><input type="text" value="" name="nomeConvidado" placeholder="Nome Completo"/></p>
+			<p><label class="formEventoField">Rg:</label><br/><input type="text" value="" name="rg" placeholder="AA-00.000.000"/></p>
+			
+			<p><button type="submit">Adicionar</button></p>
 		</form>
-		</div>
+	</div>
 
-	<table class="container tabelaConvidado">
-		<thead>
-			<tr>
-				<th>Nome Convidado</th>
-				<th>RG</th>
-				<th>Deletar</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="convidado : ${convidados}">
-				<td><span th:text="${convidado.nomeConvidado}"></span></td>
-				<td><span th:text="${convidado.rg}"></span></td>
-				<td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('EC#deletarConvidado').arg(0, convidado.rg)).build()}"><i class="material-icons left">delete</i></a></td>
-			</tr>
-		</tbody>
-	</table>
+	<section class="sectionTableGuest">
+		<table class="tableEventList">
+			<thead>
+				<tr>
+					<th>Nome Convidado</th>
+					<th>RG</th>
+					<th>Deletar</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="convidado : ${convidados}">
+					<td><span th:text="${convidado.nomeConvidado}"></span></td>
+					<td><span th:text="${convidado.rg}"></span></td>
+					<td><a th:href="${(#mvc.url('EC#deletarConvidado').arg(0, convidado.rg)).build()}"><i class="material-icons left">delete</i></a></td>
+				</tr>
+			</tbody>
+		</table>
+	</section>
 	
+	<footer class="rodape">
+		<p>@Copyright 2020-2020 Sistema web spring boot com autenticação via spring security</p>
+	</footer>	
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
 </body>
-
 
 </html>
