--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,11 @@
 <head>
 	<title>EventosApp</title>
 	 <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-      <!--Import materialize.css-->      
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>     
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
       <link rel="stylesheet" href="style/styleCss.css"/>
 </head>
 <body>
@@ -16,7 +16,7 @@
 	<header>
 		<nav class="menu">
 		    <div>
-	            <a class="title" href="/login">Lista de Eventos</a>
+	            <a class="title" href="/eventos">Lista de Eventos</a>
 		        <a class="cadastro" href="/cadastrarEvento">Cadastrar evento</a>
 		    </div>
 		</nav>	
@@ -32,9 +32,7 @@
 	</footer>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 
 </body>
-
 
 </html>
